--- a/public/index.html
+++ b/public/index.html
@@ -256,6 +256,9 @@
 <li>
 <p>第四十课 - 自然而然【随缘】【完结】 2024年9月9日</p>
 </li>
+<li>
+<p>第四十一课 我的缺点错误隐私，悟道过程，喜欢执着爱婚姻，命运【补充】 2025年12月31日</p>
+</li>
 </ul>
 <h1 id="随缘自然而然-1">自然而然【随缘】</h1>
 
