--- a/public/index.html
+++ b/public/index.html
@@ -257,7 +257,19 @@
 <p>第四十课 - 自然而然【随缘】【完结】 2024年9月9日</p>
 </li>
 <li>
-<p>第四十一课 我的缺点错误隐私，悟道过程，喜欢执着爱婚姻，命运【补充】 2025年12月31日</p>
+<p>第四十一课 我的缺点错误隐私，悟道过程，喜欢执着爱婚姻，命运，修行【补充】 2025年12月31日</p>
+</li>
+<li>
+ <ul>
+  <p>总结</p>
+  <li>1. 要有兴趣爱好</li>
+  <li>2. 要有擅长的方面（最好是擅长一个行业，不要一个点，而是一个面或者一个体）</li>
+  <li>3. 要有知识面广泛，达到一通百通的能力，保持谦虚不断学习，灵活应对</li>
+  <li>4. 像高手学习（佛陀）修行，贪嗔痴执着，禅定，内心如如不动，向内求</li>
+  <li>5. 锻炼身体，思维，灵魂</li>
+  <li>6. 实现完整的自己，拥有智慧，并且不断精进</li>
+  <li>7. 随缘自然而然即可</li>
+ </ul>
 </li>
 </ul>
 <h1 id="随缘自然而然-1">自然而然【随缘】</h1>
